[tool.poetry]
name = "software"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9, <3.13"
uncertainties = "^3.1.7"
numpy = "^1.26.3"
plotly = "^5.18.0"
scipy = "^1.12.0"
clipboard = "^0.0.4"
pandas = "^2.2.1"
pyside6 = "^6.6.3.1"
pyqtgraph = "^0.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
